--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.2
-pandas==2.0.3  # ← الترقية إلى إصدار أحدث متوافق مع Python 3.11
-numpy==1.24.3  # ← إضافة numpy يدعم pandas 2.0.3 (مطلوب)
+pandas==2.0.3
+numpy==1.24.3
 gunicorn==20.1.0
 openpyxl==3.1.2
 matplotlib==3.7.1
