--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ numpy
 gunicorn==20.1.0
 openpyxl==3.1.2
 matplotlib==3.7.1
-weasyprint==53.3
-pydyf==0.8.0
+weasyprint==65.1
+pydyf== 0.11.0
+cairocffi==1.6.0
+cffi==1.15.1
