--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==2.3.2
-pandas
-numpy
+pandas==2.0.3  # تحديد إصدار ثابت لتجنب مشاكل التوافق
+numpy==1.24.3
 gunicorn==20.1.0
 openpyxl==3.1.2
 matplotlib==3.7.1
 weasyprint==65.1
-pydyf== 0.11.0
+pydyf==0.11.0  # تأكد من عدم وجود مسافات قبل/بعد ==
 cairocffi==1.6.0
 cffi==1.15.1
