--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+# أدوات بناء (تقلل مشاكل pip على Render)
+pip>=25.0
+setuptools>=70.0
+wheel>=0.43
+
+# Web
 Flask==2.3.2
-pandas==2.0.3  # تحديد إصدار ثابت لتجنب مشاكل التوافق
-numpy==1.24.3
-gunicorn==20.1.0
+gunicorn==21.2.0
+
+# Data
+numpy==1.26.4
+pandas==2.2.2
 openpyxl==3.1.2
-matplotlib==3.7.1
+
+# Plotting
+matplotlib==3.8.4
+
+# PDF / Reporting
 weasyprint==65.1
-pydyf==0.11.0  # تأكد من عدم وجود مسافات قبل/بعد ==
+pydyf==0.11.0
 cairocffi==1.6.0
-cffi==1.15.1
-setuptools>=70
-wheel
-pip>=25
+cffi==1.16.0
